# SDLDojo

./: .gitignore  CMakeLists.txt  README.md  makefile  makefile-linux  makefile-osx  sdl_test.cpp  sdl_test_simple.cpp  setup.sh
Bubble/: CMakeLists.txt
Bubble/src/: main.cpp
Lesson0/: CMakeLists.txt
Lesson0/src/: main.cpp
Lesson1/: CMakeLists.txt
Lesson2/: CMakeLists.txt
Lesson2/src/: Lesson2.cpp
Lesson3/: CMakeLists.txt
Lesson3/src/: .main.cpp.swp  main.cpp
Lesson4/: CMakeLists.txt
Lesson4/src/: .main.cpp.swp  main.cpp
Lesson5/: CMakeLists.txt
Lesson5/src/: main.cpp
Lesson6/: CMakeLists.txt
Lesson6/src/: main.cpp
Ronin/: CMakeLists.txt
Ronin/src/: Spaceship.cpp  Spaceship.h  main.cpp
SpaceStation/: CMakeLists.txt
SpaceStation/src/: main.cpp
include/: cleanup.h  log.h  res_path.h  sdl.h
src/: Lesson1.cpp  Lesson2.cpp  PrintResPath.cpp  SDLInitTest.cpp
