project(Ronin)
find_package(SDL2_ttf REQUIRED SDL2_image REQUIRED)
include_directories(${SDL2_TTF_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR})
add_executable(Ronin src/main.cpp)
target_link_libraries(Ronin ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${SDL2_TTF_LIBRARY})
install(TARGETS Ronin RUNTIME DESTINATION ${BIN_DIR})
